# muse

./: .gitignore  CMakeLists.txt  CONTRIBUTING  ChangeLog  Makefile  Makefile.in  README  README.ladspaguis  README.md  README.svn-branch  README.translate  aclocal.m4  all.h  build.sh  compile_muse.sh  config.h.in  configure  configure.ac  gen  muse.pro  pch.txt  update_translations.sh
al/: CMakeLists.txt  Makefile.am  Makefile.in  dsp.cpp  dsp.h  sig.cpp  sig.h  xml.cpp
attic/muse/: Makefile.am  README.translate  SECURITY  muse.prj  muse_svn.includes  svnmuse.files  svnmuse.includes
muse/: .files,  .mops,  .qped  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  Doxyfile.in  Makefile.in  NEWS  README  README.de  README.effects-rack  README.instruments  SECURITY  TODO  all.h  app.cpp  app.cpp.orig  app.h  appearance.cpp  appearance.h  audio.cpp  audio.h  audioconvert.cpp  audioconvert.h  audioprefetch.cpp  audioprefetch.h  audiotrack.cpp  cobject.cpp  cobject.h  common.am  conf.cpp  conf.h  config.h  config.h.in  configure.ac  confmport.cpp  confmport.h  controlfifo.h  (+110 more)
muse/al/: CMakeLists.txt  al.cpp  al.h  dsp.cpp  dsp.h  marker.cpp  pos.cpp  pos.h  sig.cpp  tempo.cpp  tempo.h  xml.cpp  xml.h
muse/arranger/: CMakeLists.txt  Makefile.am  alayout.cpp  alayout.h  arranger.cpp  arranger.h  arrangerview.cpp  arrangerview.h  pcanvas.cpp  pcanvas.h  tlist.cpp  tlist.h  trackautomationview.cpp  trackinfo.cpp
muse/awl/: CMakeLists.txt  aslider.cpp  aslider.h  awlplugin.cpp  awlplugin.h  checkbox.h  combobox.h  drawbar.cpp  floatentry.cpp  floatentry.h  knob.cpp  knob.h  ltest.cpp  midimeter.cpp  midimeter.h  midimslider.cpp  midimslider.h  midipanentry.cpp  midipanentry.h  midipanknob.h  midivolentry.cpp  midivolentry.h  mslider.cpp  mslider.h  posedit.cpp  sigedit.cpp  slider.cpp  slider.h  tcanvas.cpp  tcanvas.h  volslider.cpp  volslider.h
muse/cliplist/: CMakeLists.txt  cliplist.cpp  cliplist.h
muse/ctrl/: CMakeLists.txt  Makefile.in  ctrlcanvas.cpp  ctrlcanvas.h  ctrledit.cpp  ctrledit.h  ctrlpanel.cpp  ctrlpanel.h
muse/doc/: CMakeLists.txt  README.CVS  README.de  README.realtime  README.shortcuts
muse/driver/: CMakeLists.txt  Makefile.am  alsamidi.cpp  alsamidi.h  audiodev.h  dummyaudio.cpp  jack.cpp  jackaudio.h  jackmidi.cpp  jackmidi.h  rtctimer.cpp  rtctimer.h
muse/grepmidi/: Makefile.am  grepmidi  grepmidi.cpp
muse/instruments/: CMakeLists.txt  editinstrument.cpp  editinstrument.h  midictrledit.cpp  minstrument.cpp  minstrument.h
muse/liste/: CMakeLists.txt  Makefile.in  editctrlbase.ui  editevent.cpp  editevent.h  listedit.cpp  listedit.h
muse/m4/: ax_python.m4  docbook.m4
muse/marker/: CMakeLists.txt  marker.cpp  markerview.cpp  markerview.h
muse/master/: CMakeLists.txt  lmaster.cpp  lmaster.h  master.cpp  master.h  masteredit.cpp  masteredit.h  tscale.cpp  tscale.h
muse/midiedit/: CMakeLists.txt  cmd.h  dcanvas.cpp  dcanvas.h  dlist.cpp  dlist.h  drumedit.cpp  drumedit.h  drummap.cpp  drummap.h  ecanvas.cpp  ecanvas.h  piano.cpp  pianoroll.cpp  pianoroll.h  prcanvas.cpp  prcanvas.h  quantconfig.cpp  scoreedit.cpp  scoreedit.h
muse/midiplugins/: CMakeLists.txt
muse/mixer/: CMakeLists.txt  amixer.cpp  amixer.h  astrip.cpp  astrip.h  auxknob.h  meter.cpp  meter.h  mstrip.cpp  mstrip.h  panknob.h  rack.cpp  rack.h  routedialog.cpp  routedialog.h  routedialogbase.ui  strip.cpp  strip.h
muse/mplugins/: CMakeLists.txt  midifilterimpl.cpp  midifilterimpl.h  midiitransform.cpp  midiitransform.h  mitplugin.cpp  mitplugin.h  mittranspose.cpp  mittranspose.h  mrconfig.h  random.cpp  rhythm.cpp  rhythm.h
muse/muse/: CMakeLists.txt  DOC  Makefile.am  aboutbox.ui  app.cpp  app.h  appearance.cpp  appearance.h  appearance.ui  arranger.cpp  audio.cpp  audio.h  audioaux.cpp  audioaux.h  audioconvert.cpp  audioconvert.h  audiodev.h  audiogroup.cpp  audiogroup.h  audioinput.cpp  audioinput.h  audiooutput.cpp  audiooutput.h  audioprefetch.cpp  audioprefetch.h  audiotrack.cpp  audiotrack.h  audiowriteback.cpp  auxplugin.cpp  auxplugin.h  bench  canvas.cpp  canvas.h  cobject.cpp  cobject.h  conf.cpp  configtrack.h  confmport.cpp  confmport.h  ctrl.cpp  (+144 more)
muse/plugins/: CMakeLists.txt
muse/remote/: CMakeLists.txt  Makefile.in  pyapi.cpp
muse/share/: CMakeLists.txt  Makefile.am
muse/synti/: CMakeLists.txt
muse/utils/: Makefile.am  muse-song-convert.py
muse/waveedit/: CMakeLists.txt  Makefile.in  editgain.cpp  editgainbase.ui  waveedit.cpp  waveedit.h  waveview.cpp  waveview.h
muse/widgets/: CMakeLists.txt  aboutbox_impl.cpp  aboutbox_impl.h  appearancebase.ui  arrangercolumns.cpp~  arrangercolumns.h~  arrangercolumnsbase.ui  bigtime.cpp  bigtime.h  canvas.cpp  canvas.h  checkbox.cpp  checkbox.h  citem.cpp  citem.h  comboQuant.cpp  comboQuant.h  combobox.cpp  combobox.h  comment.cpp  comment.h  commentbase.ui  ctrlcombo.cpp  custom_widget_actions.cpp  dentry.cpp  didyouknow.ui  dimap.cpp  dimap.h  doublelabel.cpp  doublelabel.h  drange.cpp  drange.h  editmetadialogbase.ui  editnotedialogbase.ui  editsysexdialogbase.ui  fdialogbuttons.ui  filedialog.cpp  filedialog.h  fontsel.cpp  gatetime.cpp  (+132 more)
muse/xpm/: Makefile.am  addtrack_audioinput.xpm  addtrack_wavetrack.xpm  automation_take_snapshot.xpm  back.xpm  blacksquare.xpm  bouncetofile.xpm  cmark.xpm  (+23 more)
muse2/: ABOUT_THIS_BRANCH  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile.in  README  README.de  README.effects-rack  README.instruments  README.shortcuts  README.softsynth  README.svn-branch  README.usage  README.vstsdk  all.h  autogen.sh  common.am  config.h.in  config.h.in.ORIG-MUSE1  findorphans.sh  grid.med  muse.prj  muse.pro  pch.txt  test.med  testproj.med  update_pro.sh
muse3/: CMakeLists.txt  COPYING  ChangeLog  LICENSE  README  README.de  README.developer  README.developer.undo_system  README.editor-shortcuts  README.effects-rack  README.instruments  README.metronome  README.python  README.translate  README.usage  README.vstsdk  README.win32  SECURITY  compile_muse.sh  compile_muse_mingw.sh  config.h.in  find_manual_plural.sh  find_translation_concatenation.sh  muse.pro  pch.txt  resources.qrc
(+4951 files in other folders)
